<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_LAMP_ERROR" Id="{4921bf0b-46a2-4adb-9997-96612de65a31}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LAMP_ERROR :
(
	OK					:= 0,
	HW_NOT_OP,			
	INIT_FAILURE,		
	UNEXPECTED_OFF,
	UNEXPECTED_ON,
	FAULT_SIG,
	MAXON,
	STILL_COOLING,
	TIMEOUT_DISABLE,
	TIMEOUT_INIT,
	TIMEOUT_OFF,
	TIMEOUT_ON,
	// Simulator errors
	SIM_NOT_INITIALISED	:= 90,
	SIM_NULL_POINTER		:= 100	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>