<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_LAMP_CFG" Id="{f9924ab9-cd48-4def-aee7-2b2b462ed7be}">
    <Declaration><![CDATA[TYPE T_LAMP_CFG :
STRUCT
	sName:				STRING	:= 'Lamp';	// Instance name
	bActiveLowFault:	BOOL 	:= FALSE;	(* If TRUE, Fault signal is Active Low *)
	bActiveLowOn:		BOOL 	:= FALSE;	(* If TRUE, On signal is Active Low *)
	bActiveLowSwitch:	BOOL 	:= FALSE;	(* If TRUE, Switch ctrl signal is Active Low *)

	bIgnoreFault:		BOOL 	:= FALSE;	(* If TRUE, Fault feedback signal is ignored *)
	bInitialState:		BOOL 	:= FALSE;	(* default lamp state is OFF *)
	bInvertAnalog:		BOOL 	:= FALSE;	(* If TRUE, analog feedback is active, if signal < nAnalogThreshold *)
	
	lrInitialIntensity:	LREAL 	:= 0.0;		// Initial intensity [%]. Default 0.0.

	nAnalogThreshold:	DINT 	:= 0;		(* Analog feedback signal threshold [bits].
										  	If this signal is used, any value above it will indicate that the lamp is ON. *)
	nFullRange:			UDINT 	:= 32767;	(* Full range of A/D converter for analog output for intensity control. Default is 15-bit.
										  	Beckhoff 16-bit analog output terminals include the sign.
										  	Effectively, for 0-10V terminals, this is a 15-bit resolution.  *)
	nSigStablePeriod:   UDINT 	:= 100;		(* signal is stable if it has been constant for so long [msec] *)
	nTimeout:     		UDINT 	:= 3000;	(* timeout for transitions [msec] *)


	nCooldown:			UDINT 	:= 0;		(* Cooldown time [sec] *)
	nMaxOn:				UDINT 	:= 0;		(* Maximum time for lamp to be ON [sec]. Zero means no limit. *)
	nWarmup:			UDINT 	:= 0;		(* Warmup time [sec] *)
	
	// Logging
	bLogExtTime:		BOOL 	:= FALSE;		// If TRUE, use external time in event logs. Default FALSE.
	bDebug:				BOOL 	:= FALSE;		// If TRUE, show event logs of Debug type. Default FALSE.
	bLog:				BOOL 	:= TRUE;		// If TRUE, log events. Default TRUE.
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>